hover 추가, header 수정

--- a/resources/css/output/styles.css
+++ b/resources/css/output/styles.css
@@ -332,7 +332,9 @@ legend {
 }
 
 #header {
-  background-color: #fff;
+  transform: translateY(0);
+  transition: transform 0.4s ease;
+  background-color: rgba(255, 255, 255, 0.8);
   position: fixed;
   top: 0;
   left: 0;
@@ -441,14 +443,17 @@ legend {
     font-size: 2rem;
   }
 }
-#footer .footer__copyright {
+#footer .footer__nav .gnb a:hover {
+  text-decoration: underline;
+}
+#footer .copyright {
   font-size: 6.4rem;
   font-weight: 500;
   line-height: 1;
   letter-spacing: -1.5px;
 }
 @media (min-width: 1024px) {
-  #footer .footer__copyright {
+  #footer .copyright {
     font-size: 7.2rem;
   }
 }
@@ -459,12 +464,16 @@ legend {
 #footer .btn-top {
   padding-top: 4px;
 }
+#footer .btn-top:hover::after {
+  background-image: url(../../../resources/images/pattern/common/btn-top_on.svg);
+}
 #footer .btn-top::after {
   display: block;
   content: "";
   width: 40px;
   height: 40px;
-  background: url(../../../resources/images/pattern/common/la_arrow-up.svg) no-repeat center/contain;
+  background: url(../../../resources/images/pattern/common/btn-top.svg) no-repeat center/contain;
+  transition: all 0.3s;
 }
 @media (min-width: 1024px) {
   #footer .btn-top::after {
@@ -504,8 +513,8 @@ legend {
   }
 }
 .intro__txt {
-  padding: 44px 0 36px 0;
-  font-size: 14.4vw;
+  padding: 36px 0;
+  font-size: clamp(1.6rem, 14.4vw, 7rem);
   line-height: 1.1;
   letter-spacing: -0.1rem;
   font-weight: 500;
@@ -566,6 +575,166 @@ legend {
   opacity: 0;
 }
 
+.sec-leadin .sec-leadin__cont {
+  position: relative;
+  padding-top: 56px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.sec-leadin .arrow-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 36px;
+}
+.sec-leadin .arrow-box__text {
+  overflow: hidden;
+}
+.sec-leadin .stepinto {
+  display: block;
+  transform: translateY(100%);
+  font-size: clamp(2.2rem, 6.5vw, 3rem);
+}
+@media (min-width: 600px) {
+  .sec-leadin .stepinto {
+    font-size: clamp(3rem, 4.5vw, 4rem);
+  }
+}
+@media (min-width: 1024px) {
+  .sec-leadin .stepinto {
+    font-size: clamp(4rem, 4vw, 5.2rem);
+  }
+}
+.sec-leadin .arrow-box__arrow {
+  margin-top: 10px;
+  transform-origin: right top;
+  overflow: hidden;
+  position: relative;
+  padding-top: 20px;
+  padding-right: 20px;
+}
+.sec-leadin .arrow-box__arrow .arrow-start {
+  position: relative;
+  width: 36px;
+  height: 36px;
+  border-bottom: 4px solid #000;
+  border-left: 4px solid #000;
+}
+@media (min-width: 600px) {
+  .sec-leadin .arrow-box__arrow .arrow-start {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media (min-width: 1024px) {
+  .sec-leadin .arrow-box__arrow .arrow-start {
+    width: 70px;
+    height: 70px;
+  }
+}
+.sec-leadin .arrow-box__arrow .arrow-end {
+  width: 70px;
+  height: 4px;
+  background-color: #000;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  transform-origin: left center;
+  transform: translateY(50%) rotate(-45deg);
+}
+@media (min-width: 600px) {
+  .sec-leadin .arrow-box__arrow .arrow-end {
+    width: 96px;
+  }
+}
+@media (min-width: 1024px) {
+  .sec-leadin .arrow-box__arrow .arrow-end {
+    width: 120px;
+  }
+}
+.sec-leadin .txt-box {
+  overflow: hidden;
+}
+@media (min-width: 600px) {
+  .sec-leadin .txt-box .txt-box__top {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .sec-leadin .txt-box .txt-box__top {
+    font-size: 2.4rem;
+  }
+}
+.sec-leadin .txt-box .txt-box__bottom {
+  overflow: hidden;
+  margin-top: 20px;
+  font-size: clamp(1rem, 7vw, 3.2rem);
+}
+@media (min-width: 600px) {
+  .sec-leadin .txt-box .txt-box__bottom {
+    font-size: clamp(3.2rem, 5vw, 4em);
+  }
+}
+@media (min-width: 1024px) {
+  .sec-leadin .txt-box .txt-box__bottom {
+    font-size: clamp(4rem, 4vw, 6rem);
+    margin-top: 40px;
+  }
+}
+.sec-leadin .txt-box .bg-highlight {
+  padding: 0px 0.6rem;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+}
+@media (min-width: 600px) {
+  .sec-leadin .txt-box .bg-highlight {
+    padding: 0px 1.2rem;
+  }
+}
+.sec-leadin .txt-box .bg-highlight::after {
+  content: "";
+  width: 0;
+  max-width: 100%;
+  height: 100%;
+  background-color: #1d1d1d;
+  border-radius: 3.6rem;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  z-index: -1;
+  transition: width 0.5s ease;
+}
+.sec-leadin .txt-box .bg-highlight-active::after {
+  width: 100%;
+}
+.sec-leadin .txt-box .line-highlight {
+  padding: 0px 4px;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+}
+.sec-leadin .txt-box .line-highlight::after {
+  display: block;
+  content: "";
+  width: 0; /* 초기 너비를 0으로 설정해 밑줄이 보이지 않도록 */
+  height: 50%;
+  background-color: #d8d8d8;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  transition: width 0.5s ease; /* 너비 변화 애니메이션 */
+}
+.sec-leadin .txt-box .line-highlight-active::after {
+  width: 100%; /* 최종 너비 */
+}
+
+.sec-card {
+  opacity: 0;
+  transform: translateY(50px);
+}
 .sec-card .card__item {
   overflow: hidden;
   border-radius: 12px;
@@ -606,11 +775,15 @@ legend {
 .sec-card .sec-card__cont .since .card__link .title {
   font-size: 4rem;
   line-height: 1.2;
+  transition: all 0.3s;
 }
 .sec-card .sec-card__cont .since .card__link .bottom-box {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+}
+.sec-card .sec-card__cont .since:hover .title {
+  color: #022be9;
 }
 .sec-card .sec-card__cont .news {
   background-color: #f0f0f0;
@@ -622,16 +795,22 @@ legend {
   flex-direction: column;
   gap: 8px;
 }
-.sec-card .sec-card__cont .news .card__link .image-box {
+.sec-card .sec-card__cont .news .card__link .thumb-box {
   margin: 8px;
   border-radius: 12px;
   flex: 3;
-  background: url(../../../resources/images/pattern/common/sec-card_news.jpg) no-repeat center/cover;
+  overflow: hidden;
 }
 @media (min-width: 1024px) {
-  .sec-card .sec-card__cont .news .card__link .image-box {
+  .sec-card .sec-card__cont .news .card__link .thumb-box {
     margin: 12px;
   }
+}
+.sec-card .sec-card__cont .news .card__link .thumb-box .thumbnail {
+  background: url(../../../resources/images/pattern/common/sec-card_news.jpg) no-repeat center/cover;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s;
 }
 .sec-card .sec-card__cont .news .card__link .btn-more::after {
   position: absolute;
@@ -682,6 +861,9 @@ legend {
     font-size: 2.6rem;
   }
 }
+.sec-card .sec-card__cont .news:hover .thumbnail {
+  transform: scale(1.05);
+}
 .sec-card .sec-card__cont .wrapper-link {
   height: 170px;
   display: grid;
@@ -693,6 +875,10 @@ legend {
 }
 .sec-card .sec-card__cont .wrapper-link .map .card__link {
   background: url(../../../resources/images/pattern/common/sec-card_map.png) no-repeat center/cover;
+  transition: all 0.3s;
+}
+.sec-card .sec-card__cont .wrapper-link .map:hover .card__link {
+  transform: scale(1.05);
 }
 .sec-card .sec-card__cont .wrapper-link .magazine {
   background-color: #1d1d1d;
@@ -722,20 +908,29 @@ legend {
 .sec-card .sec-card__cont .livetalk,
 .sec-card .sec-card__cont .article {
   height: 400px;
+  transition: all 0.3s;
 }
 .sec-card .sec-card__cont .livetalk .card__link,
 .sec-card .sec-card__cont .article .card__link {
   position: relative;
   padding: 0;
 }
-.sec-card .sec-card__cont .livetalk .card__link .image-box,
-.sec-card .sec-card__cont .article .card__link .image-box {
-  border-radius: 100px;
+.sec-card .sec-card__cont .livetalk .card__link .thumb-box,
+.sec-card .sec-card__cont .article .card__link .thumb-box {
   width: 85%;
   height: 100%;
+  border-radius: 100px;
+  overflow: hidden;
+}
+.sec-card .sec-card__cont .livetalk .card__link .thumbnail,
+.sec-card .sec-card__cont .article .card__link .thumbnail {
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s;
 }
 .sec-card .sec-card__cont .livetalk .card__link .btn-text,
 .sec-card .sec-card__cont .article .card__link .btn-text {
+  opacity: 0;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -743,13 +938,43 @@ legend {
   align-items: center;
   justify-content: center;
   text-align: center;
+  transition: all 0.3s;
+}
+@media (min-width: 600px) {
+  .sec-card .sec-card__cont .livetalk .card__link .btn-text,
+  .sec-card .sec-card__cont .article .card__link .btn-text {
+    opacity: 1;
+  }
+}
+.sec-card .sec-card__cont .livetalk .card__link .btn-text .btn-text__text,
+.sec-card .sec-card__cont .article .card__link .btn-text .btn-text__text {
+  width: 80%;
+}
+@media (min-width: 600px) {
+  .sec-card .sec-card__cont .livetalk .card__link .btn-text .btn-text__text,
+  .sec-card .sec-card__cont .article .card__link .btn-text .btn-text__text {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .sec-card .sec-card__cont .livetalk .card__link .btn-text .ph,
 .sec-card .sec-card__cont .article .card__link .btn-text .ph {
+  display: inline-block;
   margin-left: 4px;
   font-weight: 700;
+  transition: all 0.3s;
 }
-.sec-card .sec-card__cont .livetalk .image-box {
+.sec-card .sec-card__cont .livetalk .card__link .btn-text:hover .ph,
+.sec-card .sec-card__cont .article .card__link .btn-text:hover .ph {
+  transform: translateX(5px);
+}
+.sec-card .sec-card__cont .livetalk:hover .thumbnail,
+.sec-card .sec-card__cont .article:hover .thumbnail {
+  transform: scale(1.05);
+}
+.sec-card .sec-card__cont .livetalk .thumb-box .thumbnail {
   background: url(../../../resources/images/pattern/common/sec-card_livetalk.png) no-repeat top center/cover;
 }
 .sec-card .sec-card__cont .livetalk .btn-text {
@@ -761,7 +986,7 @@ legend {
 .sec-card .sec-card__cont .article .card__link {
   flex-direction: row-reverse;
 }
-.sec-card .sec-card__cont .article .card__link .image-box {
+.sec-card .sec-card__cont .article .card__link .thumb-box .thumbnail {
   background: url(../../../resources/images/pattern/common/sec-card_article.jpg) no-repeat center/cover;
 }
 .sec-card .sec-card__cont .article .card__link .btn-text {
@@ -825,8 +1050,10 @@ legend {
   z-index: 1;
   color: #fff;
 }
-.sec-card .sec-card__cont .wrapper-accordion .mobile .bottom-box .btn-more::after {
+.sec-card .sec-card__cont .wrapper-accordion .mobile .bottom-box .btn-more {
   z-index: 1;
+}
+.sec-card .sec-card__cont .wrapper-accordion .mobile .bottom-box .btn-more::after {
   background-color: #fff;
   color: #1d1d1d;
 }
@@ -895,8 +1122,8 @@ legend {
     overflow: hidden;
     background-color: #f0f0f0;
   }
-  .sec-card .sec-card__cont .livetalk .card__link .image-box,
-  .sec-card .sec-card__cont .article .card__link .image-box {
+  .sec-card .sec-card__cont .livetalk .card__link .thumb-box,
+  .sec-card .sec-card__cont .article .card__link .thumb-box {
     width: 100%;
   }
   .sec-card .sec-card__cont .livetalk .card__link .btn-text,
@@ -1047,7 +1274,7 @@ legend {
 @media (min-width: 1024px) and (min-width: 1440px) {
   .sec-card .sec-card__cont .livetalk .card__link .btn-text,
   .sec-card .sec-card__cont .article .card__link .btn-text {
-    max-width: 240px;
+    max-width: 200px;
     font-size: 1.8rem;
   }
 }
@@ -1091,7 +1318,7 @@ legend {
     margin-top: 8px;
   }
   .sec-card .sec-card__cont .wrapper-accordion .desktop .card__item {
-    transition: all 0.6s ease;
+    transition: all 0.4s ease;
   }
   .sec-card .sec-card__cont .wrapper-accordion .desktop .card__item::after {
     display: block;
@@ -1240,6 +1467,54 @@ legend {
     margin: 0; /* 기본 마진으로 설정 */
     overflow: visible; /* 숨김 해제 */
   }
+}
+.sec-card .magazine .btn-link,
+.sec-card .magazine .btn-goto,
+.sec-card .kiafrieze .btn-link,
+.sec-card .kiafrieze .btn-goto,
+.sec-card .frieze .btn-link,
+.sec-card .frieze .btn-goto,
+.sec-card .exhibitor .btn-link,
+.sec-card .exhibitor .btn-goto,
+.sec-card .partner .btn-link,
+.sec-card .partner .btn-goto {
+  transition: all 0.3s;
+}
+.sec-card .magazine .btn-link::after,
+.sec-card .magazine .btn-goto::after,
+.sec-card .kiafrieze .btn-link::after,
+.sec-card .kiafrieze .btn-goto::after,
+.sec-card .frieze .btn-link::after,
+.sec-card .frieze .btn-goto::after,
+.sec-card .exhibitor .btn-link::after,
+.sec-card .exhibitor .btn-goto::after,
+.sec-card .partner .btn-link::after,
+.sec-card .partner .btn-goto::after {
+  transition: all 0.3s;
+}
+.sec-card .magazine :hover .btn-link,
+.sec-card .magazine :hover .btn-goto,
+.sec-card .kiafrieze :hover .btn-link,
+.sec-card .kiafrieze :hover .btn-goto,
+.sec-card .frieze :hover .btn-link,
+.sec-card .frieze :hover .btn-goto,
+.sec-card .exhibitor :hover .btn-link,
+.sec-card .exhibitor :hover .btn-goto,
+.sec-card .partner :hover .btn-link,
+.sec-card .partner :hover .btn-goto {
+  color: #ff5f00 !important;
+}
+.sec-card .magazine :hover .btn-link::after,
+.sec-card .magazine :hover .btn-goto::after,
+.sec-card .kiafrieze :hover .btn-link::after,
+.sec-card .kiafrieze :hover .btn-goto::after,
+.sec-card .frieze :hover .btn-link::after,
+.sec-card .frieze :hover .btn-goto::after,
+.sec-card .exhibitor :hover .btn-link::after,
+.sec-card .exhibitor :hover .btn-goto::after,
+.sec-card .partner :hover .btn-link::after,
+.sec-card .partner :hover .btn-goto::after {
+  background-color: #ff5f00 !important;
 }
 
 .sec-slide {
@@ -1543,7 +1818,6 @@ legend {
 }
 
 .btn-more::after {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1555,6 +1829,7 @@ legend {
   color: #fff;
   content: "\e3d4";
   font-family: "Phosphor-Bold" !important;
+  transition: all 0.3s ease; /* 트랜지션 추가 */
 }
 @media (min-width: 1024px) and (max-width: 1439px) {
   .btn-more::after {
@@ -1570,158 +1845,8 @@ legend {
     font-size: 2rem;
   }
 }
-
-.sec-leadin .sec-leadin__cont {
-  position: relative;
-  padding-top: 56px;
-  padding-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-}
-.sec-leadin .arrow-box {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-top: 36px;
-}
-.sec-leadin .arrow-box__text {
-  overflow: hidden;
-}
-.sec-leadin .stepinto {
-  display: block;
-  transform: translateY(100%);
-  font-size: clamp(2.2rem, 6.5vw, 3rem);
-}
-@media (min-width: 600px) {
-  .sec-leadin .stepinto {
-    font-size: clamp(3rem, 4.5vw, 4rem);
-  }
-}
-@media (min-width: 1024px) {
-  .sec-leadin .stepinto {
-    font-size: clamp(4rem, 4vw, 5.2rem);
-  }
-}
-.sec-leadin .arrow-box__arrow {
-  margin-top: 10px;
-  transform-origin: right top;
-  overflow: hidden;
-  position: relative;
-  padding-top: 20px;
-  padding-right: 20px;
-}
-.sec-leadin .arrow-box__arrow .arrow-start {
-  position: relative;
-  width: 36px;
-  height: 36px;
-  border-bottom: 4px solid #000;
-  border-left: 4px solid #000;
-}
-@media (min-width: 600px) {
-  .sec-leadin .arrow-box__arrow .arrow-start {
-    width: 50px;
-    height: 50px;
-  }
-}
-@media (min-width: 1024px) {
-  .sec-leadin .arrow-box__arrow .arrow-start {
-    width: 70px;
-    height: 70px;
-  }
-}
-.sec-leadin .arrow-box__arrow .arrow-end {
-  width: 70px;
-  height: 4px;
-  background-color: #000;
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  transform-origin: left center;
-  transform: translateY(50%) rotate(-45deg);
-}
-@media (min-width: 600px) {
-  .sec-leadin .arrow-box__arrow .arrow-end {
-    width: 96px;
-  }
-}
-@media (min-width: 1024px) {
-  .sec-leadin .arrow-box__arrow .arrow-end {
-    width: 120px;
-  }
-}
-@media (min-width: 600px) {
-  .sec-leadin .top-text-box {
-    font-size: 2rem;
-  }
-}
-@media (min-width: 1024px) {
-  .sec-leadin .top-text-box {
-    font-size: 2.4rem;
-  }
-}
-.sec-leadin .bottom-text-box {
-  overflow: hidden;
-  margin-top: 20px;
-  font-size: clamp(1rem, 7vw, 3.2rem);
-}
-@media (min-width: 600px) {
-  .sec-leadin .bottom-text-box {
-    font-size: clamp(3.2rem, 5vw, 4em);
-  }
-}
-@media (min-width: 1024px) {
-  .sec-leadin .bottom-text-box {
-    font-size: clamp(4rem, 4vw, 6rem);
-    margin-top: 40px;
-  }
-}
-.sec-leadin .bg-highlight {
-  padding: 0px 0.6rem;
-  position: relative;
-  display: inline-block;
-  z-index: 1;
-}
-@media (min-width: 600px) {
-  .sec-leadin .bg-highlight {
-    padding: 0px 1.2rem;
-  }
-}
-.sec-leadin .bg-highlight::after {
-  content: "";
-  width: 0;
-  max-width: 100%;
-  height: 100%;
-  background-color: #1d1d1d;
-  border-radius: 3.6rem;
-  position: absolute;
-  top: 0;
-  left: 0px;
-  z-index: -1;
-  transition: width 0.5s ease;
-}
-.sec-leadin .bg-highlight-active::after {
-  width: 100%;
-}
-.sec-leadin .line-highlight {
-  padding: 0px 4px;
-  position: relative;
-  display: inline-block;
-  z-index: 1;
-}
-.sec-leadin .line-highlight::after {
-  display: block;
-  content: "";
-  width: 0; /* 초기 너비를 0으로 설정해 밑줄이 보이지 않도록 */
-  height: 50%;
-  background-color: #d8d8d8;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  transition: width 0.5s ease; /* 너비 변화 애니메이션 */
-}
-.sec-leadin .line-highlight-active::after {
-  width: 100%; /* 최종 너비 */
+.btn-more:hover::after {
+  transform: rotate(180deg);
 }
 
 .sec-tag {
@@ -1730,6 +1855,9 @@ legend {
   background-color: #1d1d1d;
   position: relative;
   overflow: hidden;
+}
+.sec-tag .inner {
+  position: static;
 }
 .sec-tag__cont {
   width: 100%;
@@ -1748,13 +1876,18 @@ legend {
   background-color: #fff;
   border: 1px solid #1d1d1d;
   border-radius: 24px;
-  font-size: 20px;
+  font-size: 1.8rem;
   font-weight: bold;
   color: #1d1d1d;
   display: block;
   padding: 12px 16px;
   text-align: center;
-  line-height: 1;
+}
+@media (min-width: 1024px) {
+  .sec-tag__cont .tag__item {
+    font-size: 2rem;
+    padding: 12px 20px;
+  }
 }
 .sec-tag__cont .bg-primary {
   background-color: #022be9;
@@ -1774,10 +1907,12 @@ legend {
 }
 @media (min-width: 600px) {
   .sec-tag__canvas {
-    height: 240px;
+    height: 280px;
   }
 }
 .sec-tag .sec-tag__text {
+  width: 100%;
+  height: auto;
   z-index: 1;
   position: absolute;
   top: 0;
@@ -1787,18 +1922,18 @@ legend {
   white-space: nowrap; /* 줄바꿈 방지 */
 }
 .sec-tag .sec-tag__text .text-box {
-  width: 100%;
-  animation-timing-function: linear;
+  will-change: transform;
+  display: inline-block;
   animation-name: main-marquee-ani;
   animation-iteration-count: infinite;
-  animation-duration: 20s;
+  animation-duration: 15s;
   animation-direction: normal;
   animation-timing-function: linear;
   white-space: nowrap;
+  padding-left: 24px;
   font-size: 24px;
   font-weight: 700;
   font-size: 6rem;
-  padding: 8px 0;
   color: #fff;
 }
 @keyframes main-marquee-ani {
