--- a/pages/layout/footer.html
+++ b/pages/layout/footer.html
@@ -2,16 +2,16 @@
   <div class="footer__nav">
     <ul class="gnb">
       <li><a href="#">About</a></li>
-      <li><a href="#">Insights</a></li>
+      <li><a href="#">Insight</a></li>
       <li><a href="#">Archive</a></li>
       <li><a href="#">News</a></li>
-      <li><a href="#">Partnes</a></li>
+      <li><a href="#">Partner</a></li>
       <li><a href="#">Membership</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
   <div class="footer__info">
-    <p class="footer__copyright">©KIAF SEOUL</p>
+    <p class="copyright">©KIAF SEOUL</p>
     <a href="#" class="btn-top"><span class="blind">top</span></a>
   </div>
 </div>
