--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -9,9 +9,6 @@
 
 // intro
 .intro {
-  //background-color: lightcoral;
-  //padding-top: 80px;
-  //height: 80vh;
   .inner {
     padding-top: 72px;
     padding-bottom: 20px;
@@ -30,8 +27,9 @@
     }
   }
   &__txt {
-    padding: 44px 0 36px 0;
-    font-size: 14.4vw;
+    padding: 36px 0;
+    font-size: clamp(1.6rem, 14.4vw, 7rem);
+    //font-size: 14.4vw;
     line-height: 1.1;
     letter-spacing: -0.1rem;
     //font-size: 4.8rem;
@@ -98,8 +96,164 @@
   }
 }
 
+// sec-leadin
+.sec-leadin {
+  .sec-leadin__cont {
+    position: relative;
+    padding-top: 56px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .arrow-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 36px;
+    @include tabletMore {
+    }
+  }
+  .arrow-box__text {
+    overflow: hidden;
+  }
+  .stepinto {
+    display: block;
+    //font-size: 2.6rem;
+    transform: translateY(100%);
+    font-size: clamp(2.2rem, 6.5vw, 3rem);
+    @include mobileMore {
+      font-size: clamp(3rem, 4.5vw, 4rem);
+    }
+    @include tabletMore {
+      font-size: clamp(4rem, 4vw, 5.2rem);
+    }
+  }
+  .arrow-box__arrow {
+    margin-top: 10px;
+    transform-origin: right top;
+    overflow: hidden;
+    position: relative;
+    padding-top: 20px;
+    padding-right: 20px;
+    @include tabletMore {
+    }
+
+    .arrow-start {
+      position: relative;
+      width: 36px;
+      height: 36px;
+      border-bottom: 4px solid #000;
+      border-left: 4px solid #000;
+      @include mobileMore {
+        width: 50px;
+        height: 50px;
+      }
+      @include tabletMore {
+        width: 70px;
+        height: 70px;
+      }
+    }
+    .arrow-end {
+      width: 70px;
+      height: 4px;
+      background-color: #000;
+      position: absolute;
+      left: 0px;
+      bottom: 0px;
+      transform-origin: left center;
+      transform: translateY(50%) rotate(-45deg);
+      @include mobileMore {
+        width: 96px;
+      }
+      @include tabletMore {
+        width: 120px;
+      }
+    }
+  }
+
+  .txt-box {
+    overflow: hidden;
+    .txt-box__top {
+      @include mobileMore {
+        font-size: 2rem;
+      }
+      @include tabletMore {
+        font-size: 2.4rem;
+      }
+    }
+    .txt-box__bottom {
+      overflow: hidden;
+      margin-top: 20px;
+      //padding: 20px 0 20px 20px;
+      //font-size: 7vw;
+      font-size: clamp(1rem, 7vw, 3.2rem);
+      @include mobileMore {
+        font-size: clamp(3.2rem, 5vw, 4em);
+      }
+      @include tabletMore {
+        font-size: clamp(4rem, 4vw, 6rem);
+        margin-top: 40px;
+      }
+    }
+
+    .bg-highlight {
+      padding: 0px 0.6rem;
+      position: relative;
+      display: inline-block;
+      z-index: 1;
+      @include mobileMore {
+        padding: 0px 1.2rem;
+      }
+    }
+
+    .bg-highlight::after {
+      content: '';
+      width: 0;
+      max-width: 100%;
+      height: 100%;
+      background-color: $gray-90;
+      border-radius: 3.6rem;
+      position: absolute;
+      top: 0;
+      left: 0px;
+      z-index: -1;
+      transition: width 0.5s ease;
+    }
+
+    .bg-highlight-active::after {
+      width: 100%;
+    }
+
+    .line-highlight {
+      padding: 0px 4px;
+      position: relative;
+      display: inline-block;
+      z-index: 1;
+    }
+
+    .line-highlight::after {
+      display: block;
+      content: '';
+      width: 0; /* 초기 너비를 0으로 설정해 밑줄이 보이지 않도록 */
+      height: 50%;
+      background-color: $gray-30;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: -1;
+      transition: width 0.5s ease; /* 너비 변화 애니메이션 */
+    }
+
+    .line-highlight-active::after {
+      width: 100%; /* 최종 너비 */
+    }
+  }
+}
+
 // sec-card
 .sec-card {
+  opacity: 0;
+  transform: translateY(50px);
   //background-color: lemonchiffon;
   // 공통 card__item 레이아웃
   .card__item {
@@ -134,11 +288,17 @@
         .title {
           font-size: 4rem;
           line-height: 1.2;
+          transition: all 0.3s;
         }
         .bottom-box {
           display: flex;
           align-items: flex-end;
           justify-content: space-between;
+        }
+      }
+      &:hover {
+        .title {
+          color: $primary;
         }
       }
     }
@@ -150,15 +310,19 @@
         padding: 0px;
         flex-direction: column;
         gap: 8px;
-        .image-box {
-          //margin-top: 12px;
+        .thumb-box {
           margin: calc(16px / 2);
-          //margin-top: 12px;
           border-radius: 12px;
           flex: 3;
-          background: url(../../../resources/images/pattern/common/sec-card_news.jpg) no-repeat center / cover;
+          overflow: hidden;
           @include tabletMore {
             margin: calc(24px / 2);
+          }
+          .thumbnail {
+            background: url(../../../resources/images/pattern/common/sec-card_news.jpg) no-repeat center / cover;
+            width: 100%;
+            height: 100%;
+            transition: all 0.3s;
           }
         }
         .btn-more::after {
@@ -210,6 +374,11 @@
           }
         }
       }
+      &:hover {
+        .thumbnail {
+          transform: scale(1.05);
+        }
+      }
     }
     .wrapper-link {
       height: 170px;
@@ -220,6 +389,12 @@
         grid-area: 1 / 1 / 3 / 2;
         .card__link {
           background: url(../../../resources/images/pattern/common/sec-card_map.png) no-repeat center / cover;
+          transition: all 0.3s;
+        }
+        &:hover {
+          .card__link {
+            transform: scale(1.05);
+          }
         }
       }
       .magazine {
@@ -251,15 +426,23 @@
     .livetalk,
     .article {
       height: 400px;
+      transition: all 0.3s;
       .card__link {
         position: relative;
         padding: 0;
-        .image-box {
-          border-radius: 100px;
+        .thumb-box {
           width: 85%;
           height: 100%;
+          border-radius: 100px;
+          overflow: hidden;
+        }
+        .thumbnail {
+          width: 100%;
+          height: 100%;
+          transition: all 0.3s;
         }
         .btn-text {
+          opacity: 0;
           width: 120px;
           height: 120px;
           border-radius: 50%;
@@ -267,16 +450,44 @@
           align-items: center;
           justify-content: center;
           text-align: center;
+          transition: all 0.3s;
+          @include mobileMore {
+            opacity: 1;
+          }
+          .btn-text__text {
+            width: 80%;
+            @include mobileMore {
+              width: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+          }
           .ph {
+            display: inline-block;
             margin-left: 4px;
             font-weight: 700;
+            transition: all 0.3s;
           }
+          &:hover {
+            .ph {
+              transform: translateX(5px);
+            }
+          }
+        }
+      }
+      &:hover {
+        .thumbnail {
+          transform: scale(1.05);
         }
       }
     }
     .livetalk {
-      .image-box {
-        background: url(../../../resources/images/pattern/common/sec-card_livetalk.png) no-repeat top center / cover;
+      .thumb-box {
+        .thumbnail {
+          //overflow: hidden;
+          background: url(../../../resources/images/pattern/common/sec-card_livetalk.png) no-repeat top center / cover;
+        }
       }
       .btn-text {
         position: absolute;
@@ -288,8 +499,10 @@
     .article {
       .card__link {
         flex-direction: row-reverse;
-        .image-box {
-          background: url(../../../resources/images/pattern/common/sec-card_article.jpg) no-repeat center / cover;
+        .thumb-box {
+          .thumbnail {
+            background: url(../../../resources/images/pattern/common/sec-card_article.jpg) no-repeat center / cover;
+          }
         }
         .btn-text {
           position: absolute;
@@ -350,8 +563,11 @@
             z-index: 1;
             color: $white;
           }
-          .btn-more::after {
+          .btn-more {
             z-index: 1;
+          }
+          .btn-more::after {
+            //z-index: 1;
             background-color: $white;
             color: $gray-90;
           }
@@ -429,7 +645,7 @@
         overflow: hidden;
         background-color: $gray-10;
         .card__link {
-          .image-box {
+          .thumb-box {
             width: 100%;
           }
           .btn-text {
@@ -604,7 +820,7 @@
         .card__link {
           .btn-text {
             @include desktopLarge {
-              max-width: 240px;
+              max-width: 200px;
               font-size: 1.8rem;
             }
           }
@@ -655,7 +871,7 @@
             margin-top: 8px;
           }
           .card__item {
-            transition: all 0.6s ease;
+            transition: all 0.4s ease;
             &::after {
               display: block;
               content: '';
@@ -846,6 +1062,29 @@
       }
     }
   } //card__area
+  .magazine,
+  .kiafrieze,
+  .frieze,
+  .exhibitor,
+  .partner {
+    .btn-link,
+    .btn-goto {
+      transition: all 0.3s;
+      &::after {
+        transition: all 0.3s;
+      }
+    }
+    :hover {
+      .btn-link,
+      .btn-goto {
+        color: $secondary !important;
+        &::after {
+          //color: $secondary !important;
+          background-color: $secondary !important;
+        }
+      }
+    }
+  }
 }
 
 // sec-slide
@@ -1161,178 +1400,65 @@
   content: '\E06C';
   font-family: 'Phosphor-Bold' !important;
 }
-.btn-more::after {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  font-size: 1.4rem;
-  background-color: $gray-90;
-  color: $white;
-  content: '\e3d4';
-  font-family: 'Phosphor-Bold' !important;
-  @include desktopMedium {
-    width: 34px;
-    height: 34px;
-    font-size: 1.6rem;
-  }
-  @include desktopLarge {
-    width: 42px;
-    height: 42px;
-    font-size: 2rem;
-  }
-}
-
-.sec-leadin {
-  //background-color: lightcyan;
-  .sec-leadin__cont {
-    position: relative;
-    padding-top: 56px;
-    padding-bottom: 20px;
+// .btn-more::after {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 30px;
+//   height: 30px;
+//   border-radius: 50%;
+//   font-size: 1.4rem;
+//   background-color: $gray-90;
+//   color: $white;
+//   content: '\e3d4';
+//   font-family: 'Phosphor-Bold' !important;
+//   @include desktopMedium {
+//     width: 34px;
+//     height: 34px;
+//     font-size: 1.6rem;
+//   }
+//   @include desktopLarge {
+//     width: 42px;
+//     height: 42px;
+//     font-size: 2rem;
+//   }
+// }
+// .btn-more {
+//   position: relative;
+//   &:hover::after {
+//     transform: rotate(180deg) !important;
+//   }
+// }
+.btn-more {
+  //position: relative;
+  &::after {
     display: flex;
-    flex-direction: column;
-  }
-  .arrow-box {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-top: 36px;
-    @include tabletMore {
-    }
-  }
-  .arrow-box__text {
-    overflow: hidden;
-  }
-  .stepinto {
-    display: block;
-    //font-size: 2.6rem;
-    transform: translateY(100%);
-    font-size: clamp(2.2rem, 6.5vw, 3rem);
-    @include mobileMore {
-      font-size: clamp(3rem, 4.5vw, 4rem);
-    }
-    @include tabletMore {
-      font-size: clamp(4rem, 4vw, 5.2rem);
-    }
-  }
-  .arrow-box__arrow {
-    margin-top: 10px;
-    transform-origin: right top;
-    overflow: hidden;
-    position: relative;
-    padding-top: 20px;
-    padding-right: 20px;
-    @include tabletMore {
-    }
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    background-color: $gray-90;
+    color: $white;
+    content: '\e3d4';
+    font-family: 'Phosphor-Bold' !important;
+    transition: all 0.3s ease; /* 트랜지션 추가 */
 
-    .arrow-start {
-      position: relative;
-      width: 36px;
-      height: 36px;
-      border-bottom: 4px solid #000;
-      border-left: 4px solid #000;
-      @include mobileMore {
-        width: 50px;
-        height: 50px;
-      }
-      @include tabletMore {
-        width: 70px;
-        height: 70px;
-      }
+    @include desktopMedium {
+      width: 34px;
+      height: 34px;
+      font-size: 1.6rem;
     }
-    .arrow-end {
-      width: 70px;
-      height: 4px;
-      background-color: #000;
-      position: absolute;
-      left: 0px;
-      bottom: 0px;
-      transform-origin: left center;
-      transform: translateY(50%) rotate(-45deg);
-      @include mobileMore {
-        width: 96px;
-      }
-      @include tabletMore {
-        width: 120px;
-      }
-    }
-  }
-  .top-text-box {
-    @include mobileMore {
+    @include desktopLarge {
+      width: 42px;
+      height: 42px;
       font-size: 2rem;
     }
-    @include tabletMore {
-      font-size: 2.4rem;
-    }
-  }
-  .bottom-text-box {
-    overflow: hidden;
-    margin-top: 20px;
-    //padding: 20px 0 20px 20px;
-    //font-size: 7vw;
-    font-size: clamp(1rem, 7vw, 3.2rem);
-    @include mobileMore {
-      font-size: clamp(3.2rem, 5vw, 4em);
-    }
-    @include tabletMore {
-      font-size: clamp(4rem, 4vw, 6rem);
-      margin-top: 40px;
-    }
   }
 
-  .bg-highlight {
-    padding: 0px 0.6rem;
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    @include mobileMore {
-      padding: 0px 1.2rem;
-    }
-  }
-
-  .bg-highlight::after {
-    content: '';
-    width: 0;
-    max-width: 100%;
-    height: 100%;
-    background-color: $gray-90;
-    border-radius: 3.6rem;
-    position: absolute;
-    top: 0;
-    left: 0px;
-    z-index: -1;
-    transition: width 0.5s ease;
-  }
-
-  .bg-highlight-active::after {
-    width: 100%;
-  }
-
-  .line-highlight {
-    padding: 0px 4px;
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-  }
-
-  .line-highlight::after {
-    display: block;
-    content: '';
-    width: 0; /* 초기 너비를 0으로 설정해 밑줄이 보이지 않도록 */
-    height: 50%;
-    background-color: $gray-30;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-    transition: width 0.5s ease; /* 너비 변화 애니메이션 */
-  }
-
-  .line-highlight-active::after {
-    width: 100%; /* 최종 너비 */
+  &:hover::after {
+    transform: rotate(180deg);
   }
 }
 
@@ -1342,6 +1468,10 @@
   background-color: $gray-90;
   position: relative;
   overflow: hidden;
+
+  .inner {
+    position: static;
+  }
 
   &__cont {
     width: 100%;
@@ -1359,14 +1489,17 @@
       border: 1px solid $gray-90;
       border-radius: 24px;
 
-      font-size: 20px;
+      font-size: 1.8rem;
       font-weight: bold;
 
       color: $gray-90;
       display: block;
       padding: 12px 16px;
       text-align: center;
-      line-height: 1;
+      @include tabletMore {
+        font-size: 2rem;
+        padding: 12px 20px;
+      }
     }
     .bg-primary {
       background-color: $primary;
@@ -1387,10 +1520,15 @@
     visibility: hidden;
     z-index: -1;
     @include mobileMore {
-      height: 240px;
+      height: 280px;
     }
   }
+
   .sec-tag__text {
+    //display: flex;
+    //gap: 24px;
+    width: 100%;
+    height: auto;
     z-index: 1;
     position: absolute;
     top: 0;
@@ -1399,23 +1537,24 @@
     //background-color: $gray-90;
     overflow: hidden; /* 가로로 넘치는 부분 숨김 */
     white-space: nowrap; /* 줄바꿈 방지 */
+    //display: flex;
     .text-box {
-      //position: relative; /* 위치 조정 */
-      //align-items: center; /* 세로 정렬 */
-      //display: inline-block;
-      width: 100%;
-      // animation: main-marquee-ani 30s linear infinite; /* 무한 반복 */
-      animation-timing-function: linear;
+      will-change: transform;
+      display: inline-block;
+      //width: 100%;
       animation-name: main-marquee-ani;
       animation-iteration-count: infinite;
-      animation-duration: 20s;
+      animation-duration: 15s;
       animation-direction: normal;
       animation-timing-function: linear;
       white-space: nowrap;
+      //padding-left: 100%;
+      padding-left: 24px;
+
       font-size: 24px;
       font-weight: 700;
       font-size: 6rem;
-      padding: 8px 0;
+      //padding: 4px 0;
       color: #fff;
     }
 
