--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -458,9 +458,9 @@
             width: 80%;
             @include mobileMore {
               width: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
+              // display: flex;
+              // align-items: center;
+              // justify-content: center;
             }
           }
           .ph {
@@ -649,9 +649,9 @@
             width: 100%;
           }
           .btn-text {
-            width: 70%;
+            width: 100%;
             height: auto;
-            max-width: 180px;
+            max-width: 170px;
             border-radius: 50px;
             bottom: 10%;
             left: 50%;
@@ -688,7 +688,7 @@
             top: 30%;
             left: 50%;
             //font-size: 3rem;
-            font-size: clamp(2.4rem, 3.65vw, 2.8rem);
+            font-size: clamp(2.6rem, 3.65vw, 2.8rem);
             width: 80%;
             line-height: 1.2;
             font-weight: 500;
