--- a/pages/layout/footer.html
+++ b/pages/layout/footer.html
@@ -1,7 +1,7 @@
 <div class="inner">
   <div class="footer__nav">
     <ul class="gnb">
-      <li><a href="#">About</a></li>
+      <li><a href="./about.html">About</a></li>
       <li><a href="#">Insight</a></li>
       <li><a href="#">Archive</a></li>
       <li><a href="#">News</a></li>
