--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -1,4 +1,4 @@
-// 사이트 레이아웃 관련 요소
+// 사이트 레이아웃 스타일
 
 // skip-nav
 #skip-nav {
@@ -48,11 +48,11 @@
 
 // header
 #header {
-  transform: translateY(0);
-  transition: transform 0.4s ease;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.65);
+  backdrop-filter: blur(0.5rem);
   position: fixed;
   top: 0;
+  right: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
@@ -82,8 +82,9 @@
 
     .lang,
     .all-menu {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
+      position: relative;
       svg {
         stroke: $gray-90;
       }
@@ -94,50 +95,59 @@
 // gnb
 #nav-all {
   &.active {
-    //opacity: 1;
-    //left: 0;
     pointer-events: auto;
     transform: translateY(0);
     opacity: 1;
   }
+  background-color: $white;
   position: fixed;
-  // top: 0;
-  // left: 100%;
   top: 0;
   left: 0;
-  padding: 0 20px;
   width: 100%;
   height: 100%;
-  transform: translateY(-200px);
+  padding-top: 72px;
+  transform: translateY(-100%);
   opacity: 0;
+  transition: all 0.6s ease;
   pointer-events: none;
-
-  background-color: $white;
-  transition: all 0.3s;
-  .nav-all__tit {
-    //height: 72px;
-    font-size: 3.2rem;
-    font-weight: 400;
-    padding: 12px 0;
+  z-index: 10;
+  @include tabletMore {
+    padding-top: 80px;
+  }
+  .inner {
+    @include tabletMore {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20%;
+    }
   }
   .gnb {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding-top: 30px;
+    padding-top: 20px;
+    @include tabletMore {
+      padding-top: 80px;
+    }
     a {
       display: block;
       font-size: 3rem;
       font-weight: 600;
+      @include tabletMore {
+        font-size: 5rem;
+        color: $gray-30;
+        transition: all 0.3s;
+        &:hover {
+          color: $gray-90;
+        }
+      }
     }
-  }
-  .btn-close {
-    position: absolute;
-    top: 23px;
-    right: 20px;
   }
 }
 
+// footer
 #footer {
   border-top: 2px solid $gray-90;
   padding: 28px 0px 20px 0px;
@@ -159,11 +169,7 @@
       @include tabletMore {
         font-size: 2rem;
       }
-      a {
-        //transition: all 0.3s;
-      }
       a:hover {
-        //font-weight: bold;
         text-decoration: underline;
       }
     }
@@ -185,7 +191,7 @@
     padding-top: 4px;
     &:hover {
       &::after {
-        background-image: url(../../../resources/images/pattern/common/btn-top_on.svg);
+        background-image: url(../../../resources/images/component/common/icon_btn_top_on.svg);
       }
     }
   }
@@ -194,7 +200,7 @@
     content: '';
     width: 40px;
     height: 40px;
-    background: url(../../../resources/images/pattern/common/btn-top.svg) no-repeat center / contain;
+    background: url(../../../resources/images/component/common/icon_btn_top.svg) no-repeat center / contain;
     transition: all 0.3s;
     @include tabletMore {
       width: 52px;
